sass/_posts.scss
.post {
  .post-header {
    margin-bottom: 2rem;

    .post-title {
      a {
        color: inherit;
        text-decoration: none;
        &:hover,
        &:focus {
          background-color: $link-hover-color;
          color: $link-color-masthead; // white
        }
      }
      margin-top: 0.3rem;
      margin-bottom: 0.4rem;
    }
  }
}

.post {
  @media (min-width: $min-width-breakpoint) {
  max-width: 75%;
  }
}

.page {
  .page-header {
    margin-bottom: 2rem;

    .page-title {
      margin-bottom: 0.3rem;
    }
  }

  .pagination {
    clear: both;
  }
}

.post-date {
  font-size: 85%;
  color: $post-date-color;
}

.index {
  margin: 2rem;
}

